--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu Navegador Não é Compativel Com Isso</iframe>
 
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagem/imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagem/imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="#" target="tela"><img src="imagem/imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="#" target="tela"><img src="imagem/imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="#" target="tela"><img src="imagem/imagens/logo linkedin.jpg" alt="linkedin"></a>
+            
 
         </section>
     </main>
