--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagem/imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="home.html" target="tela"><img src="imagem/imagens/logo-home.jpg" alt="home"></a><br>
             <a href="#" target="tela"><img src="imagem/imagens/logo-github.jpg" alt="github"></a><br>
             <a href="#" target="tela"><img src="imagem/imagens/logo-youtube.jpg" alt="youtube"></a><br>
             <a href="#" target="tela"><img src="imagem/imagens/logo-facebook.jpg" alt="facebook"></a><br>
-            <a href="#" target="tela"><img src="imagem/imagens/logo linkedin.jpg" alt="linkedin"></a>
+            <a href="linkedin.html" target="tela"><img src="imagem/imagens/logo linkedin.jpg" alt="linkedin"></a>
             
 
         </section>
