--- a/github.html
+++ b/github.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>linkedin</title>
+    <title>github</title>
     <link rel="stylesheet" href="estilos/social.css">
-   
 </head>
 <body>
-    <img src="imagem/imagens/tela-LinkedIn.jpg" alt="linkedin">
-    <a href="https://www.linkedin.com/in/ronaldo-pereira-da-silva-989948232/" target="_blank">Acesse</a>
+    <img src="imagem/imagens/Screenshot_20220806-190101_Chrome.jpg" alt="github">
+    <a href="https://github.com/RONALDOPEREIRADASILVA?tab=repositories" target="_blank">Acesse</a>  
     
 </body>
 </html>
