--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagem/imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagem/imagens/logo-github.jpg" alt="github"></a><br>
-            <a href="#" target="tela"><img src="imagem/imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="#" target="tela"><img src="imagem/imagens/logo-facebook.jpg" alt="facebook"></a><br>
+
+            <a href="github.html" target="tela"><img src="imagem/imagens/logo-github.jpg" alt="github"></a><br>
+
+            <a href="youtube.html" target="tela"><img src="imagem/imagens/logo-youtube.jpg" alt="youtube"></a><br>
+
+            <a href="facebook.html" target="tela"><img src="imagem/imagens/logo-facebook.jpg" alt="facebook"></a><br>
+
             <a href="linkedin.html" target="tela"><img src="imagem/imagens/logo linkedin.jpg" alt="linkedin"></a>
             
 
